--- a/tilegame/css/control-panel.css
+++ b/tilegame/css/control-panel.css
@@ -76,7 +76,6 @@
   transition: 0.2s;
   border: none;
   z-index: 2;
-  border: solid 2px red;
 }
 
   .customiser-button:hover {
@@ -199,6 +198,10 @@
   .control-panel-tc {
     top: auto !important;
     bottom: 0 !important;
+  }
+
+  .customiser-button {
+    width: 50px;
   }
 
   .score-boost {
